Task #4502 - Manage reception of several -3 from servers when the user tries to login.

--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -188,6 +188,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/login_servers_busy_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/servers_busy" />
         </LinearLayout>
     </LinearLayout>
 
