Bug #4478 - Zip Browser is not working on Android 5+

--- a/app/src/main/res/layout-v21/activity_zip_browser.xml
+++ b/app/src/main/res/layout-v21/activity_zip_browser.xml
@@ -17,9 +17,9 @@
 
     <ListView
         android:id="@+id/zip_list_view_browser"
+		android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
-        
 
 </RelativeLayout>
