First changes to the new fab button

--- a/app/src/main/res/layout-v21/activity_manager.xml
+++ b/app/src/main/res/layout-v21/activity_manager.xml
@@ -20,11 +20,20 @@
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             tools:context=".ManagerActivityLollipop" />
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
+        <android.support.design.widget.CoordinatorLayout android:id="@+id/coordinator_layout"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="@color/white"
             android:layout_width="match_parent"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_height="match_parent"
-            android:layout_below="@id/toolbar" />
+            android:layout_below="@id/toolbar"
+            xmlns:app="http://schemas.android.com/apk/res-auto">
+
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/toolbar" />
 
         <include
             android:layout_width="fill_parent"
@@ -147,7 +156,26 @@
                     android:layout_weight="1" />
             </LinearLayout>
         </TabHost>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floating_button"
+            android:layout_width="@dimen/fab_button_diameter"
+            android:layout_height="@dimen/fab_button_diameter"
+            android:background="@drawable/ripple"
+            android:elevation="@dimen/elevation_low"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_add_white"
+            android:stateListAnimator="@anim/button_elevation"
+            android:tint="@android:color/white"
+            android:layout_gravity="bottom|right|end"/>
+        </android.support.design.widget.CoordinatorLayout>
     </RelativeLayout>
+
+    <include
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/sliding_upload_panel"
+        android:visibility="gone" />
+
 
     <!--
     The navigation drawer 
