--- a/app/src/main/res/layout-v21/activity_manager.xml
+++ b/app/src/main/res/layout-v21/activity_manager.xml
@@ -35,20 +35,6 @@
                 android:layout_height="match_parent"
                 android:layout_below="@id/toolbar" />
 
-        <include
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            layout="@layout/layout_get_pro_account"
-            android:visibility="gone" />
-
-        <include
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            layout="@layout/layout_overquota_alert"
-            android:visibility="gone" />
-
         <!-- THE Cloud Drive TABS -->
 
         <TabHost
@@ -157,26 +143,44 @@
             </LinearLayout>
         </TabHost>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floating_button"
-            android:layout_width="@dimen/fab_button_diameter"
-            android:layout_height="@dimen/fab_button_diameter"
-            android:background="@drawable/ripple"
-            android:elevation="@dimen/elevation_low"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_add_white"
-            android:stateListAnimator="@anim/button_elevation"
-            android:tint="@android:color/white"
-            android:layout_gravity="bottom|right|end"/>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/floating_button"
+                android:layout_width="@dimen/fab_button_diameter"
+                android:layout_height="@dimen/fab_button_diameter"
+                android:background="@drawable/ripple"
+                android:elevation="@dimen/elevation_low"
+                android:layout_margin="16dp"
+                android:src="@drawable/ic_add_white"
+                android:stateListAnimator="@anim/button_elevation"
+                android:tint="@android:color/white"
+                android:layout_gravity="bottom|right|end"/>
+
+
         </android.support.design.widget.CoordinatorLayout>
+
+        <include
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:elevation="@dimen/elevation_high"
+            layout="@layout/layout_overquota_alert"
+            android:visibility="gone"
+            android:layout_alignParentBottom="true"/>
+
+        <include
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            layout="@layout/layout_get_pro_account"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <include
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         layout="@layout/sliding_upload_panel"
-        android:visibility="gone" />
-
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"/>
 
     <!--
     The navigation drawer 
