--- a/app/src/main/res/layout-v21/fragment_filebrowserlist.xml
+++ b/app/src/main/res/layout-v21/fragment_filebrowserlist.xml
@@ -508,7 +508,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:orientation="horizontal" >
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/file_list_option_open_folder"
