--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -98,6 +98,10 @@
             android:key="settings_about_terms_of_service"
         	android:title="@string/settings_about_terms_of_service"
         	android:summary="" />
+
+		<Preference
+			android:key="settings_about_code_link"
+			android:title="@string/settings_about_code_link_title" />
 		
         <Preference
             android:key="settings_about_sdk_version"
