--- a/app/src/main/res/layout-v21/activity_manager.xml
+++ b/app/src/main/res/layout-v21/activity_manager.xml
@@ -189,6 +189,13 @@
         android:visibility="gone"
         android:layout_alignParentBottom="true"/>
 
+    <include
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/sliding_contact_options_panel"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"/>
+
     <!--
     The navigation drawer 
     <include
