QA Report #4642 - Change font type & size in Change password screen (reported by @jpn )

--- a/app/src/main/res/layout-v21/activity_change_password.xml
+++ b/app/src/main/res/layout-v21/activity_change_password.xml
@@ -30,7 +30,9 @@
             android:layout_gravity="left"
             android:hint="@string/my_account_change_password_oldPassword"
             android:imeOptions="actionNext"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:fontFamily="sans-serif"
+            android:textSize="16sp"/>
 
         <EditText
             android:id="@+id/change_password_newPassword1"
@@ -39,7 +41,9 @@
             android:layout_gravity="left"
             android:hint="@string/my_account_change_password_newPassword1"
             android:imeOptions="actionNext"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:fontFamily="sans-serif"
+            android:textSize="16sp"/>
 
         <EditText
             android:id="@+id/change_password_newPassword2"
@@ -48,7 +52,9 @@
             android:layout_gravity="left"
             android:hint="@string/my_account_change_password_newPassword2"
             android:imeOptions="actionNext"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:fontFamily="sans-serif"
+            android:textSize="16sp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
