--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,6 +52,10 @@
     <color name="upgrade_orange">#ffa500</color>
     <color name="upgrade_grey">#8d8d8d</color>
     <color name="upgrade_white">#b9ffffff</color>
+    <color name="delete_account">#ff333a</color>
+
+    <color name="name_my_account">#de000000</color>
+    <color name="mail_my_account">#8a000000</color>
         
     <color name="tab_pressed">#ee0008</color>
     
