--- a/app/src/main/res/layout-v21/fragment_my_account.xml
+++ b/app/src/main/res/layout-v21/fragment_my_account.xml
@@ -20,7 +20,6 @@
 
 			<ImageView
 				android:id="@+id/my_account_email_icon"
-				style="@style/dialogActionButton"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:src="@drawable/ic_email_grey" />
@@ -49,37 +48,51 @@
 			</LinearLayout>
 
 			<LinearLayout
-				android:id="@+id/my_account_relative_layout_avatar"
-				android:layout_width="60dp"
-				android:layout_height="60dp"
-				android:layout_marginLeft="16dp"
-				android:layout_centerVertical="true"
+				android:id="@+id/my_account_extra_layout"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
 				android:orientation="horizontal">
 
-				<mega.privacy.android.app.components.RoundedImageView
-					android:id="@+id/my_account_thumbnail"
+				<RelativeLayout
 					android:layout_width="fill_parent"
-					android:layout_height="fill_parent"
-					android:scaleType="fitCenter"
-					android:layout_centerInParent="true"
-					rounded:border_color="@color/border_file_properties"
-					rounded:border_width="0dp"
-					rounded:corner_radius="27dp" />
+					android:layout_height="wrap_content"
+					android:layout_alignParentRight="true">
 
-				<TextView
-					android:id="@+id/my_account_initial_letter"
-					android:layout_width="fill_parent"
-					android:layout_height="fill_parent"
-					android:layout_marginLeft="10dp"
-					android:layout_marginTop="-5dp" />
+					<LinearLayout
+						android:id="@+id/my_account_relative_layout_avatar"
+						android:layout_width="60dp"
+						android:layout_height="60dp"
+						android:layout_gravity="right"
+						android:layout_alignParentRight="true"
+						android:orientation="horizontal">
+
+						<mega.privacy.android.app.components.RoundedImageView
+							android:id="@+id/my_account_thumbnail"
+							android:layout_width="fill_parent"
+							android:layout_height="fill_parent"
+							android:scaleType="fitCenter"
+							android:layout_centerInParent="true"
+							rounded:border_color="@color/border_file_properties"
+							rounded:border_width="0dp"
+							rounded:corner_radius="30dp" />
+
+						<TextView
+							android:id="@+id/my_account_initial_letter"
+							android:layout_width="fill_parent"
+							android:layout_height="fill_parent"
+							android:layout_marginLeft="10dp"
+							android:layout_marginTop="-5dp" />
+					</LinearLayout>
+
+				</RelativeLayout>
+
 			</LinearLayout>
-
 
 		</LinearLayout>
 
 		<LinearLayout
 			android:id="@+id/buttons_layout"
-			android:layout_width="wrap_content"
+			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:background="@color/white"
 			android:gravity="left"
@@ -89,12 +102,10 @@
 				android:id="@+id/MK_button"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_alignParentRight="true"
-				android:layout_marginRight="15dp"
-				android:paddingLeft="20dp"
-				android:paddingRight="20dp"
 				android:textColor="@color/name_my_account"
 				android:layout_centerVertical="true"
+				android:paddingLeft="12dp"
+				android:paddingRight="12dp"
 				android:text="@string/action_export_master_key"
 				android:background="@android:color/white"
 				android:elevation="@dimen/elevation_upgrade_low"
@@ -104,10 +115,6 @@
 				android:id="@+id/logout_button"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_alignParentRight="true"
-				android:layout_marginRight="15dp"
-				android:paddingLeft="20dp"
-				android:paddingRight="20dp"
 				android:textColor="@color/name_my_account"
 				android:layout_centerVertical="true"
 				android:text="@string/action_logout"
@@ -122,36 +129,26 @@
 			android:layout_height="wrap_content"
 			android:background="@color/white">
 
-			<ImageView
-				android:id="@+id/my_account_account_type_icon"
-				style="@style/dialogActionButton"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:src="@drawable/ic_email_grey"
-				android:layout_alignParentLeft="true"
-				android:visibility="invisible"/>
-
 			<LinearLayout
 				android:id="@+id/my_account_account_type_account_type_layout"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				android:layout_toRightOf="@id/my_account_account_type_icon">
+				android:gravity="left"
+				android:orientation="vertical">
 
 				<TextView
 					android:id="@+id/my_account_account_type_text"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_gravity="center_horizontal"
-					android:text="@string/my_account_title"
-					android:textColor="@color/grey_info_menu"
-					android:textStyle="bold"/>
+					android:textSize="16sp"
+					android:textColor="@color/name_my_account"/>
 
 				<TextView
 					android:id="@+id/my_account_used_space"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:textColor="@color/grey_info_menu" />
+					android:textSize="14sp"
+					android:textColor="@color/mail_my_account"/>
 
 			</LinearLayout>
 
@@ -160,11 +157,8 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_alignParentRight="true"
-				android:layout_marginRight="15dp"
-				android:paddingLeft="20dp"
-				android:paddingRight="20dp"
-				android:paddingTop="5dp"
-				android:paddingBottom="5dp"
+				android:paddingLeft="12dp"
+				android:paddingRight="12dp"
 				android:textColor="@color/white"
 				android:layout_centerVertical="true"
 				android:text="@string/my_account_upgrade_pro"
@@ -221,38 +215,22 @@
 			android:layout_height="wrap_content"
 			android:background="@color/white"
 			android:gravity="left"
-			android:orientation="horizontal" >
+			android:orientation="vertical" >
 
-			<ImageView
-				android:id="@+id/my_account_last_session_icon"
-				style="@style/dialogActionButton"
+			<TextView
+				android:id="@+id/my_account_last_session_label"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:src="@drawable/ic_email_grey"
-				android:visibility="invisible" />
+				android:text="@string/my_account_last_session"
+				android:textSize="16sp"
+				android:textColor="@color/name_my_account"/>
 
-			<LinearLayout
-				android:id="@+id/my_account_last_session_text_layout"
-				android:layout_width="fill_parent"
+			<TextView
+				android:id="@+id/my_account_last_session"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:background="@color/white"
-				android:gravity="left"
-				android:orientation="vertical" >
-
-				<TextView
-					android:id="@+id/my_account_last_session_label"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="@string/my_account_last_session"
-					android:textColor="@color/grey_info_menu"
-					android:textStyle="bold" />
-
-				<TextView
-					android:id="@+id/my_account_last_session"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:textColor="@color/grey_info_menu" />
-			</LinearLayout>
+				android:textSize="14sp"
+				android:textColor="@color/mail_my_account"/>
 		</LinearLayout>
 
 		<LinearLayout
@@ -262,14 +240,6 @@
 			android:background="@color/white"
 			android:gravity="left"
 			android:orientation="horizontal" >
-
-			<ImageView
-				android:id="@+id/my_account_connections_icon"
-				style="@style/dialogActionButton"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:src="@drawable/ic_email_grey"
-				android:visibility="invisible" />
 
 			<LinearLayout
 				android:id="@+id/my_account_connections_text_layout"
@@ -284,15 +254,24 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="@string/my_account_connections"
-					android:textColor="@color/grey_info_menu"
-					android:textStyle="bold" />
+					android:textSize="16sp"
+					android:textColor="@color/name_my_account"/>
 
 				<TextView
 					android:id="@+id/my_account_connections"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:textColor="@color/grey_info_menu" />
+					android:textSize="14sp"
+					android:textColor="@color/mail_my_account" />
 			</LinearLayout>
+
+			<ImageView
+				android:id="@+id/my_account_connections_icon"
+				style="@style/dialogActionButton"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/ic_email_grey"
+				android:visibility="invisible" />
 		</LinearLayout>
 
 		<LinearLayout
