#Task 4677 - UI improvements in "Change password" screen and minor fixes for open links

--- a/app/src/main/res/layout-v21/activity_change_password.xml
+++ b/app/src/main/res/layout-v21/activity_change_password.xml
@@ -23,6 +23,14 @@
         android:layout_below="@id/toolbar_change_pass"
         android:orientation="vertical" >
 
+        <TextView
+            android:id="@+id/title_change_pass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/my_account_change_password"
+            android:textColor="@color/delete_account"
+            android:textSize="20sp"/>
+
         <EditText
             android:id="@+id/change_password_oldPassword"
             android:layout_width="fill_parent"
