--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -3,14 +3,15 @@
     android:id="@+id/scroll_view_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_secondary"
+    android:background="@color/white"
     android:stackFromBottom="true"
     tools:context=".LoginActivityLollipop">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="left"
+        android:background="@color/white"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -86,6 +87,15 @@
                 android:textColor="@color/accentColor"
                 android:textSize="14sp" />
 
+            <TextView
+                android:id="@+id/button_forgot_pass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@color/accentColor"
+                android:textSize="14sp" />
+
             <include
                 android:id="@+id/login_delimiter"
                 layout="@layout/delimiter" />
@@ -94,7 +104,7 @@
                 android:id="@+id/login_create_account_layout"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:background="@color/background_secondary"
+                android:background="@color/background_create_account"
                 android:gravity="left"
                 android:orientation="vertical" >
 
@@ -196,6 +206,87 @@
                 android:layout_marginTop="10dp"
                 android:text="@string/servers_busy" />
         </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/forgot_pass_full_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/title_forgot_pass_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/forgot_pass"
+                android:textColor="@color/name_my_account"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:id="@+id/first_par_forgot_pass_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/forgot_pass_first_paragraph"
+                android:textColor="@color/forgot_pass_text"
+                android:textSize="16sp"
+                android:layout_below="@id/title_forgot_pass_layout"/>
+
+            <TextView
+                android:id="@+id/second_par_forgot_pass_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/forgot_pass_second_paragraph"
+                android:textColor="@color/forgot_pass_text"
+                android:textSize="16sp"
+                android:layout_below="@id/first_par_forgot_pass_layout"/>
+
+            <TextView
+                android:id="@+id/action_forgot_pass_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/forgot_pass_action"
+                android:textColor="@color/delete_account"
+                android:textSize="16sp"
+                android:layout_below="@id/second_par_forgot_pass_layout"/>
+
+            <LinearLayout
+                android:id="@+id/forgot_pass_buttons_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:gravity="left"
+                android:orientation="horizontal"
+                android:layout_below="@id/action_forgot_pass_layout">
+
+                <Button
+                    android:id="@+id/yes_MK_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:textColor="@color/white"
+                    android:text="@string/general_positive_button"
+                    android:background="@drawable/ripple_upgrade"
+                    android:elevation="@dimen/elevation_upgrade_low"
+                    android:stateListAnimator="@anim/button_upgrade_elevation"
+                    android:tint="@android:color/white" />
+
+                <Button
+                    android:id="@+id/no_MK_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:textColor="@color/white"
+                    android:text="@string/general_negative_button"
+                    android:background="@drawable/ripple_upgrade"
+                    android:elevation="@dimen/elevation_upgrade_low"
+                    android:stateListAnimator="@anim/button_upgrade_elevation"
+                    android:tint="@android:color/white" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
     </LinearLayout>
 
 </ScrollView>
