--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -17,7 +17,7 @@
         <LinearLayout
             android:id="@+id/login_login_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/white"
             android:orientation="vertical" >
 
