#Task 4676 - New IX-IU to "Forgot password?" when the user is logged in

--- a/app/src/main/res/menu-v21/activity_manager.xml
+++ b/app/src/main/res/menu-v21/activity_manager.xml
@@ -56,6 +56,13 @@
 		MEGA:showAsAction="never" />
 
 	<item
+		android:id="@+id/action_menu_forgot_pass"
+		android:orderInCategory="90"
+		android:title="@string/forgot_pass_menu"
+		android:icon="@drawable/ic_action_bar_null"
+		MEGA:showAsAction="never" />
+
+	<item
 		android:id="@+id/action_menu_export_MK"
 		android:orderInCategory="95"
 		android:title="@string/action_export_master_key"
