--- a/app/src/main/res/layout-v21/fragment_my_account.xml
+++ b/app/src/main/res/layout-v21/fragment_my_account.xml
@@ -303,104 +303,17 @@
 			</LinearLayout>
 		</LinearLayout>
 
-		<RelativeLayout
-			android:id="@+id/export_mk_full_layout"
+		<include
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:background="@color/white"
-			android:visibility="gone">
+			layout="@layout/export_mk_layout"
+			android:visibility="gone"/>
 
-			<TextView
-				android:id="@+id/title_export_MK_layout"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/backup_title"
-				android:textColor="@color/delete_account"
-				android:textSize="20sp"/>
-
-
-			<TextView
-				android:id="@+id/subtitle_export_MK_layout"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/backup_subtitle"
-				android:textColor="@color/name_my_account"
-				android:textSize="16sp"
-				android:layout_below="@id/title_export_MK_layout"/>
-
-			<TextView
-				android:id="@+id/first_par_export_MK_layout"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/backup_first_paragraph"
-				android:textColor="@color/mail_my_account"
-				android:textSize="16sp"
-				android:layout_below="@id/subtitle_export_MK_layout"/>
-
-			<TextView
-				android:id="@+id/second_par_export_MK_layout"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/backup_second_paragraph"
-				android:textColor="@color/mail_my_account"
-				android:textSize="16sp"
-				android:layout_below="@id/first_par_export_MK_layout"/>
-
-			<TextView
-				android:id="@+id/third_par_export_MK_layout"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/backup_third_paragraph"
-				android:textColor="@color/name_my_account"
-				android:textSize="14sp"
-				android:layout_below="@id/second_par_export_MK_layout"/>
-
-			<TextView
-				android:id="@+id/action_export_MK_layout"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/backup_action"
-				android:textColor="@color/mail_my_account"
-				android:textSize="8sp"
-				android:layout_below="@id/third_par_export_MK_layout"/>
-
-			<LinearLayout
-				android:id="@+id/MK_buttons_layout"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:background="@color/white"
-				android:gravity="left"
-				android:orientation="horizontal"
-				android:layout_below="@id/action_export_MK_layout">
-
-				<Button
-					android:id="@+id/copy_MK_button"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_centerVertical="true"
-					android:paddingLeft="12dp"
-					android:paddingRight="12dp"
-					android:textColor="@color/white"
-					android:text="@string/context_copy"
-					android:background="@drawable/ripple_upgrade"
-					android:elevation="@dimen/elevation_upgrade_low"
-					android:stateListAnimator="@anim/button_upgrade_elevation"
-					android:tint="@android:color/white" />
-
-				<Button
-					android:id="@+id/save_MK_button"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_centerVertical="true"
-					android:textColor="@color/white"
-					android:text="@string/save_action"
-					android:background="@drawable/ripple_upgrade"
-					android:elevation="@dimen/elevation_upgrade_low"
-					android:stateListAnimator="@anim/button_upgrade_elevation"
-					android:tint="@android:color/white" />
-			</LinearLayout>
-
-		</RelativeLayout>
+		<include
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			layout="@layout/forgot_password_layout"
+			android:visibility="gone"/>
 
 	</LinearLayout>
 
