--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="text_secondary">#7a7a7a</color>
     <color name="separator_grey">#10000000</color>
     <color name="background_secondary">#eeeeee</color>
-    <color name="background_create_account">#33cccccc</color>
+    <color name="background_create_account">#eeebeb</color>
     <color name="mega">#d90007</color>
     <color name="mega_transparency">#CCdb0605</color>
     <color name="text_login">#333333</color>
