#Task 4701 - Revamping of the sliding panel in Rubbish Bin according to the new app architecture

--- a/app/src/main/res/layout-v21/sliding_options_panel.xml
+++ b/app/src/main/res/layout-v21/sliding_options_panel.xml
@@ -385,7 +385,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
-                android:src="@drawable/ic_delete" />
+                android:src="@drawable/ic_remove" />
 
             <TextView
                 android:id="@+id/file_list_option_remove_text"
