--- a/app/src/main/res/drawable/red_rounded_corners_button.xml
+++ b/app/src/main/res/drawable/red_rounded_corners_button.xml
@@ -3,7 +3,7 @@
     android:color="?android:colorControlHighlight">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="?attr/colorAccent"/>
+            <solid android:color="@color/delete_account"/>
             <corners android:radius="2dp"/>
         </shape>
     </item>
