--- a/app/src/main/res/layout-v21/fragment_contactsgrid.xml
+++ b/app/src/main/res/layout-v21/fragment_contactsgrid.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/new_background_fragment"
     tools:context=".FileBrowserListFragment" >
 
     <ImageView
