--- a/app/src/main/res/layout-v21/fragment_filebrowsergrid.xml
+++ b/app/src/main/res/layout-v21/fragment_filebrowsergrid.xml
@@ -2,14 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/new_background_fragment"
     tools:context=".FileBrowserGridFragment" >
 
     <RelativeLayout
         android:id="@+id/content_grid_text_layout"
         android:layout_width="fill_parent"
         android:layout_height="36dp"
-        android:background="@color/content_text_background" >
+        android:background="@color/new_background_fragment" >
 
         <TextView
             android:id="@+id/content_grid_text"
@@ -37,13 +37,6 @@
             android:visibility="gone" />
     </RelativeLayout>
 
-    <View
-        android:id="@+id/separator_grid"
-        android:layout_width="fill_parent"
-        android:layout_height="1dip"
-        android:layout_below="@id/content_grid_text_layout"
-        android:background="@color/delimiterColor" />
-
     <ImageView
         android:id="@+id/file_grid_empty_image"
         android:layout_width="wrap_content"
@@ -66,7 +59,7 @@
         android:id="@+id/file_grid_view_browser"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/separator_grid"
+        android:layout_below="@id/content_grid_text_layout"
         android:choiceMode="multipleChoice"
         android:columnWidth="172dp" />
 
