--- a/app/src/main/res/layout-v21/fragment_rubbishbingrid.xml
+++ b/app/src/main/res/layout-v21/fragment_rubbishbingrid.xml
@@ -2,14 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/new_background_fragment"
     tools:context=".RubbishBinFragmentLollipop" >
     
    <RelativeLayout
         android:id="@+id/rubbishbin_grid_content_text_layout"
         android:layout_width="fill_parent"
         android:layout_height="36dp"
-        android:background="@color/content_text_background">
+        android:background="@color/new_background_fragment">
 
         <TextView
             android:id="@+id/rubbishbin_grid_content_text"
@@ -36,20 +36,13 @@
 	        android:layout_alignParentRight="true" 
 	        android:visibility="gone"/>  
     </RelativeLayout>
-    
-   <View
-        android:id="@+id/separator_grid"
-        android:layout_width="fill_parent"
-        android:layout_height="1dip"
-        android:layout_below="@id/rubbishbin_grid_content_text_layout"
-        android:background="@color/delimiterColor" />
-        
+
     <mega.privacy.android.app.components.AutofitRecyclerView
         android:id="@+id/rubbishbin_grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="multipleChoice" 
-		android:layout_below="@id/separator_grid"
+		android:layout_below="@id/rubbishbin_grid_content_text_layout"
 		android:columnWidth="172dp" />
     
     <ImageView
