--- a/app/src/main/res/layout-v21/item_contact_grid.xml
+++ b/app/src/main/res/layout-v21/item_contact_grid.xml
@@ -2,7 +2,7 @@
 	android:id="@+id/contact_grid_item_complete_layout"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
-	android:background="@color/white">
+	android:background="@color/new_background_fragment">
     
     <RelativeLayout 
         android:layout_width="172dp"
@@ -39,17 +39,14 @@
 			    android:gravity="center_horizontal|center_vertical" />
 	    
 	    </RelativeLayout>
-                
+
         <View
 	        android:id="@+id/contact_grid_separator"
-	 		android:layout_width="wrap_content"
+	 		android:layout_width="match_parent"
 	 		android:layout_height="1dp"
 	 		android:background="@color/grid_item_separator"
-	        android:scaleType="fitCenter"
-	        android:layout_marginLeft="6dp"
-	        android:layout_centerHorizontal="true"
 	        android:layout_below="@id/contact_grid_relative_layout_avatar" />
-        
+
         <ImageButton 
 	        android:id="@+id/contact_grid_three_dots"
 	        android:layout_width="wrap_content"
