--- a/app/src/main/res/layout-v21/item_file_grid.xml
+++ b/app/src/main/res/layout-v21/item_file_grid.xml
@@ -46,13 +46,10 @@
 
     <View
         android:id="@+id/file_grid_separator"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@id/file_grid_thumbnail"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="6dp"
-        android:background="@color/grid_item_separator"
-        android:scaleType="fitCenter" />
+        android:background="@color/new_background_fragment"/>
 
     <ImageButton
         android:id="@+id/file_grid_three_dots"
