--- a/app/src/main/res/layout-v21/activity_manager.xml
+++ b/app/src/main/res/layout-v21/activity_manager.xml
@@ -35,102 +35,75 @@
                 android:layout_height="match_parent"
                 android:layout_below="@id/toolbar" />
 
-        <!-- THE Cloud Drive TABS -->
+            <!-- THE Cloud Drive TABS -->
+            <LinearLayout
+                android:id="@+id/tabhost_cloud_drive"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/toolbar"
+                android:gravity="center"
+                android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/tabhost_cloud_drive"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/toolbar"
-            android:gravity="center"
-            android:orientation="vertical">
+                    <android.support.design.widget.TabLayout
+                        android:id="@+id/sliding_tabs_cloud_drive"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/mega"
+                        style="@style/MyCustomTabLayout"/>
+
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/cloud_drive_tabs_pager"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+            </LinearLayout>
+
+            <!-- THE CONTACTS TABS -->
+            <LinearLayout
+                android:id="@+id/tabhost_contacts"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/toolbar"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                    <android.support.design.widget.TabLayout
+                        android:id="@+id/sliding_tabs_contacts"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/mega"
+                        style="@style/MyCustomTabLayout"/>
+
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/contact_tabs_pager"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
+            </LinearLayout>
+
+            <!-- THE SHARES TABS -->
+            <LinearLayout
+                android:id="@+id/tabhost_shares"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/toolbar"
+                android:gravity="center"
+                android:orientation="vertical" >
 
                 <android.support.design.widget.TabLayout
-                    android:id="@+id/sliding_tabs_cloud_drive"
+                    android:id="@+id/sliding_tabs_shares"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/mega"
                     style="@style/MyCustomTabLayout"/>
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/cloud_drive_tabs_pager"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"/>
-        </LinearLayout>
-
-
-        <!-- THE CONTACTS TABS -->
-
-        <TabHost
-            android:id="@+id/tabhost_contacts"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/toolbar"
-            android:background="@color/mega" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical" >
-
-                <TabWidget
-                    android:id="@android:id/tabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/mega" >
-                </TabWidget>
-
-                <FrameLayout
-                    android:id="@android:id/tabcontent"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="0" />
-
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/contact_tabs_pager"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/shares_tabs_pager"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
             </LinearLayout>
-        </TabHost>
 
-        <!-- THE SHARES TABS -->
-
-        <TabHost
-            android:id="@+id/tabhost_shares"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/toolbar"
-            android:background="@color/mega" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical" >
-
-                <TabWidget
-                    android:id="@android:id/tabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/mega" >
-                </TabWidget>
-
-                <FrameLayout
-                    android:id="@android:id/tabcontent"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="0" />
-
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/shares_tabs_pager"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-            </LinearLayout>
-        </TabHost>
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/floating_button"
